k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oldg
  name: oldg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oldg
  template:
    metadata:
      labels:
        app: oldg
    spec:
      containers:
        - image: ghcr.io/livefun-dev/oldg:b229766535f65ba10e2625b3d758813ab5a93898
          name: oldg
          ports:
            - containerPort: 8080
              name: gql
