k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oldg
  name: oldg
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: oldg
