k8s/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
  name: oldg
  namespace: oldg
spec:
  rules:
    - host: oldg.dev.ludusrusso.space
      http:
        paths:
          - backend:
              serviceName: oldg
              servicePort: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - oldg.dev.ludusrusso.space
      secretName: oldg.dev.ludusrusso.space-tls
